# careersarthi-project

./: .env.example  .gitignore  README.md  SKILL.md  docker-compose.yml  pyproject.toml
careersarthi/: __init__.py  agent.py  auth.py
careersarthi/sub_agents/: __init__.py
careersarthi/sub_agents/deadline_guardian/: __init__.py  agent.py
careersarthi/sub_agents/inbox_tracker/: __init__.py  agent.py
careersarthi/sub_agents/interview_prep/: __init__.py  agent.py
careersarthi/sub_agents/privacy_guardian/: __init__.py  agent.py
careersarthi/sub_agents/skill_gap/: __init__.py  agent.py
careersarthi/utils/: __init__.py  audit_log.py  model.py  pii_redactor.py  storage.py
cli/: __init__.py  main.py
deploy/: Dockerfile
frontend/: app.py
frontend/styles/: main.css
mcp_server/: __init__.py  server.py
mcp_server/tools/: __init__.py  ats_scorer.py  jd_gap_analyzer.py  job_fetcher.py  resume_parser.py
pages/: _applications.py  _deadlines.py  _interview_prep.py  _resume.py  _skill_gap.py
tests/: test_core.py
utils/: backend.py
